# flowchart

./: AI_Bidirectional_Code_Flowchart_Stages.md  AI_Bidirectional_Code_Flowchart_System.md  Else.c  Flash.flow.json  README.md  flow.md  flow_explanation.txt  flow_explanation_motor.txt  flowchart.json  flowchart.stage2.json  flowchart.txt  flowchart_en.json  flowchart_en.stage2.json  flowchart_zh.json  flowchart_zh.stage2.json  flowcode  prompt.md  simple_order.flow.json
Archive/: Flash.flow.json  simple_order.flow.json
Archive/stage1/test_code/: Flash.c  simple_order.py
Archive/stage2/: index.html  package-lock.json  tsconfig.paths.json  vite.config.ts
Archive/stage2/public/: flowchart_zh.stage2.json
Archive/stage2/src/: App.tsx
Archive/stage2/tests/: StatusLegend.test.tsx  statusHelpers.test.ts  transformer.test.ts
flowcode_1/: README.md  flowchart_generator.py  prompt.md
flowcode_2/: README.md  graph_generator.py  pyproject.toml
flowcode_2/src/flowcode_renderer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flowcode_2/tests/: test_graph_processing.py
npm/flowcode-cli/: package.json
openspec/: AGENTS.md  project.md
stage1/: README.md  pyproject.toml  tutorial.md
stage1/src/flow_ir/: registry.py  serializer.py  text_utils.py
stage1/src/flow_ir.egg-info/: requires.txt  top_level.txt
stage1/src/flow_ir/parsers/: c_language.py
stage1/tests/: test_c_parser.py  test_python_parser.py
stage2/: README.md  package.json  tsconfig.json
stage2/src/: App.tsx
stage2/tests/: FlowEditor.test.tsx
(+52 files in other folders)
